<resources>
    <string name="app_name">CarCom</string>
    <string name="price">Fiyat</string>
    <string name="date">İlan Tarihi</string>
    <string name="model">Model</string>
    <string name="gear">Vites</string>
    <string name="fuel">Yakıt</string>
    <string name="color">Renk</string>
    <string name="year">Yıl</string>
    <string name="kilometer">Kilometre</string>
    <string name="adverb_details">İlan Bilgileri</string>
    <string name="adverb_explanations">Açıklama</string>
    <string name="filter">Filtrele</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>