<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/car_properties_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/properties_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:text="@string/price"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/properties_price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textColor="@color/car_ee7621"
                android:textSize="13sp"
                tool:text="344.123 TL" />
        </RelativeLayout>


        <View
            android:id="@+id/properties_price_divider"
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/car_39e0e0e0"/>

        <RelativeLayout
            android:id="@+id/properties_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:text="@string/date"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/properties_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textSize="13sp"
                tool:text="10 Kasım 2020" />
        </RelativeLayout>


        <View
            android:id="@+id/properties_date_divider"
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/car_39e0e0e0"/>

        <RelativeLayout
            android:id="@+id/properties_model_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:text="@string/model"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/properties_model_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textSize="13sp"
                tool:text="SX4 1.6 GLX Manuel" />
        </RelativeLayout>


        <View
            android:id="@+id/properties_model_divider"
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/car_39e0e0e0"/>

        <RelativeLayout
            android:id="@+id/properties_year_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:text="@string/year"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/properties_year_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textSize="13sp"
                tool:text="2006" />
        </RelativeLayout>


        <View
            android:id="@+id/properties_year_divider"
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/car_39e0e0e0"/>

        <RelativeLayout
            android:id="@+id/properties_gear_type_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:text="@string/gear"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/properties_gear_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textSize="13sp"
                tool:text="Düz" />
        </RelativeLayout>


        <View
            android:id="@+id/properties_gear_type_divider"
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/car_39e0e0e0"/>

        <RelativeLayout
            android:id="@+id/properties_fuel_type_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:text="@string/fuel"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/properties_fuel_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textSize="13sp"
                tool:text="Dizel" />
        </RelativeLayout>


        <View
            android:id="@+id/properties_fuel_type_divider"
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/car_39e0e0e0"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/properties_fragment_color_layout"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:text="@string/color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/properties_color_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textSize="13sp"
                tool:text="Kilometre" />
        </RelativeLayout>


        <View
            android:id="@+id/properties_color_divider"
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/car_39e0e0e0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/properties_fragment_kilometer_layout"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:text="@string/kilometer"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/properties_kilometer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textSize="13sp"
                tool:text="120000" />
        </RelativeLayout>


        <View
            android:id="@+id/properties_kilometer_divider"
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/car_39e0e0e0"/>


    </LinearLayout>


</RelativeLayout>